--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -103,7 +103,7 @@ If $a\in R$, then
 e.g. $2\Z=\{2n\mid n\in Z\}=(2)$\\
 \Note We sometimes write
 \[(a)=R\rdot a=a\rdot R\]
-We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $a\mid b$.
+We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $\divs{a}{b}$.
 \begin{claim}
 	$b\in (a)$ \textit{iff} $(b) \subset (a)$
 \end{claim}
