--- a/L8/L8.tex
+++ b/L8/L8.tex
@@ -16,7 +16,7 @@ $(X)\in \R[X]$ is maximal because $\R[X]/(X) \cong \R$ is a field
 	\Obs that $\ev_a$ is in fact surjective. Then
 	\[\R[X]/\Ker(\ev_a) \cong \R \implies \Ker(\ev_a) \text{ is a maximal ideal}\]
 \end{example}
-	Denote the set of polynomials with real coefficients which have $a$ as a root as $M_a\coloneqq \Ker(\ev_a)$
+	Denote the set of polynomials with real coefficients which have $a$ as a root as \[M_a\coloneqq \Ker(\ev_a)\]
 	\begin{claim}
 		$M_a = (X-a)$\quad (e.g $M_0 =(X)$)
 	\end{claim}
