--- a/Main.tex
+++ b/Main.tex
@@ -162,6 +162,7 @@ boxed title style = {colback=green!35!black}
 {co}% label prefix
 \frenchspacing
 
+\newcommand{\divs}[2]{#1 \, | \, #2}
 \newcommand{\Note}{\textcolor{Mulberry}{\underline{\textbf{\textit{Note:}}} }}
 \newcommand{\Obs}{\textbf{\textcolor{Emerald}{Observe }}}
 \newcommand{\D}{\mathrm{d}}
