--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -140,7 +140,7 @@ We see that irreducibility, in the natural sense, is about not being able to be 
 	\end{claim}
 	\begin{proof}
 		Clearly $\divs{d}{a},\, \divs{d}{b}$, by construction, since it's factors come from the same set of factors of $a,b$, namely $p_i$. Since $d$ is a common divisor, it remains to show it is a greatest common divisor.\\
-		If $\divs{c}{a}, \, \divs{c}{b}$, then we want to see that $c\,|\, d$. 
+		If $\divs{c}{a}, \, \divs{c}{b}$, then we want to see that $\divs{c}{d}$. 
 		Unique factorization tells us
 		\[c=q_1^{g_1}\rdot \dots \rdot q_m^{g_m}, \quad q_i \text{ irreducible},\quad  q_i\ne q_j, \text{ and } g_i>0\]
 		Since $\divs{c}{a},\, \divs{c}{b}$, then after (possibly) changing associates we see that the set of factors of $c$ have to be factors of $a$ and $b$, i.e
