Fixes and expositions

--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -64,7 +64,7 @@
 	But $3\ne \pm  (2+\sqrt{-5})$ hence $3\notin (2+\sqrt{-5})$ and so $2+\sqrt{-5}$ is not prime.
 \end{proof}
 We see that in an arbitrary integral domain, the notion of primality and irreduciblity are not the same. However, there are circumstances where they are the same thing.
-\begin{prop}[title = Element in PID is prime iff it is irreducible]
+\begin{prop}[title = Element in PID is prime iff it is irreducible,label =11.3]
 	In a PID an element is prime \textit{iff} it is irreducible.
 \end{prop}
 \begin{proof}
